--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "scripts": {
     "start": "webpack --mode=development --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "v10.13.0",
+    "npm": "6.4.1"
   },
   "repository": {
     "type": "git",
