--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-react": "^7.13.13",
     "antd": "^4.16.9",
     "babel-loader": "^8.2.2",
+    "core-js": "^3.16.0",
     "distinct-colors": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,6 +18,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.9",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   },
