--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
+    "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
