--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "distinct-colors": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.1.12",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-rotating-text": "^1.4.1",
