--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
+    "@charlietango/use-native-lazy-loading": "^1.9.0",
     "antd": "^4.16.9",
     "babel-loader": "^8.2.2",
     "core-js": "^3.16.0",
     "distinct-colors": "^3.0.0",
+    "intersection-observer": "^0.12.0",
     "react": "^17.0.2",
+    "react-cool-inview": "^2.0.7",
     "react-dom": "^17.0.2",
     "react-download-link": "^2.3.0",
     "react-drag-drop-files": "^2.1.12",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.1",
     "react-redux": "^7.2.4",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.2.0",
